torrc and ssh_config

--- a/index.html
+++ b/index.html
@@ -20,12 +20,13 @@
 	  <div class="menu-section">
 		<h2>   ... 🍩 ...</h2>
 		<h2> Our Menu</h2>
-		<h3>Smol Donuts</h3>
+		<h3>Bytesize Donuts</h3>
 		  <h4>Seg Fault Rasperry Creme <br>$4<br><br>
 			404 Pistachio <br>5$<br><br> 
 			GDB Honey Peach <br>$6</h4>
 		<h3> Funsize Donuts </h3>
 		<h4>Brioche Donut Choco Transcendence 
+		  <br>
 		  £12 <br><br>
 		  
 		  Marvin Maple Bacon Dream
