--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
 	  <div class="menu-container">
 		<h1>Donut Debugger</h1>
 		<h2>Exquisite Donut Munchies</h2>
+		<!-- <div class="image-container">
+			<img src="image.png" alt="Donut Image" />
+	</div> -->
+		<!-- <img src="image.png" alt="Donut Image" /> -->
 	  <div class="menu-section">
 		<h2>   ... 🍩 ...</h2>
 		<h2> Our Menu</h2>
